tests/ex4/fail222.err
Syntax error at line 12 of input. Lexer
