tests/ex4/fail222.java
// PA2 expr fail
class Main {
	public static void main(String[] args) {
		System.out.println((new Test()).test());
	}
}

class A {
    public int p(){
		int b;
		b =
			c */ d; // expr fail
		return 0;
    }
}
